#======================================================================
# CMakeLists.txt
# Samples
#======================================================================
# Author: J C Gonzalez - 2015-2017
# Copyright (C) 2015-2017 Euclid SOC Team at ESAC
#======================================================================

add_subdirectory (rwc)
add_subdirectory (vos)

